--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -47,7 +47,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Kampanya</h5>
                         <p class="card-text">Haftanın kampanyasını buradan düzenleyebilirsiniz.</p>
-                        <a href="ekipuyeleri.html" class="btn btn-primary">Kampanyayı Düzenle</a>
+                        <a href="star.html" class="btn btn-primary">Kampanyayı Düzenle</a>
                     </div>
                 </div>
             </div>
