--- a/admin/text.html
+++ b/admin/text.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
         }
+
         .container {
             background-color: #fff;
             padding: 30px;
@@ -18,16 +20,20 @@
             width: 50%;
             margin-top: 50px;
         }
+
         h1 {
             text-align: center;
             color: #333;
         }
+
         label {
             font-weight: bold;
             margin-bottom: 5px;
             display: block;
         }
-        .btn-submit, .btn-edit {
+
+        .btn-submit,
+        .btn-edit {
             width: 100%;
             padding: 10px;
             background-color: #218838;
@@ -37,14 +43,18 @@
             font-size: 16px;
             cursor: pointer;
         }
-        .btn-submit:hover, .btn-edit:hover {
+
+        .btn-submit:hover,
+        .btn-edit:hover {
             background-color: #0056b3;
         }
+
         .error {
             color: red;
             font-size: 14px;
             margin-top: 10px;
         }
+
         .display-text {
             margin-top: 20px;
             padding: 10px;
@@ -55,13 +65,15 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Metin Girişi Formu</h1>
         <form id="textForm">
             <!-- Metin Alanı -->
             <label for="inputText">Metin Girin:</label>
-            <input type="text" class="form-control" id="inputText" name="inputText" placeholder="Metninizi buraya girin" required>
+            <input type="text" class="form-control" id="inputText" name="inputText" placeholder="Metninizi buraya girin"
+                required>
 
             <!-- Hata Mesajı -->
             <div id="errorMessage" class="error"></div>
@@ -70,8 +82,7 @@
             <button type="submit" class="btn-submit">Düzenle</button>
         </form>
 
-        <!-- Girilen metni görüntüleme alanı -->
-        <div id="displayText" class="display-text"></div>
+
     </div>
 
     <script>
@@ -83,7 +94,7 @@
             }
         });
 
-        document.getElementById('textForm').addEventListener('submit', function(event) {
+        document.getElementById('textForm').addEventListener('submit', function (event) {
             event.preventDefault(); // Formun sayfayı yenilemesini engelle
 
             // Form verilerini al
@@ -116,4 +127,5 @@
         });
     </script>
 </body>
+
 </html>
