--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                                  <a class="nav-link" href="glasses.html">Our Glasses</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="shop.html">Shop</a>
+                                 <a class="nav-link" href="shop.html">Info</a>
                               </li>
                               <li class="nav-item active">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
