--- a/glasses.html
+++ b/glasses.html
@@ -42,6 +42,9 @@
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+                                    <li class="nav-item d_none sea_icon">
+                                        <a class="nav-link" href="#"><i class="fa fa-shopping-bag" aria-hidden="true"></i><i class="fa fa-search" aria-hidden="true"></i></a>
+                                     </li>
                                 </ul>
                             </div>
                         </nav>
